public/style.css
/* ... */
.category h3 {
  margin: 0;
  color: #f8f8f8;
  padding: 8%;
  line-height: 1.4em;
}

.addResource .categoryGrid, .addResource .categoryGridSpace {
  display: grid;
  margin: 0 10px;
  grid-template-columns: repeat(5, 1fr);
}

.addResource #create-resource-modal-button {
  grid-column: 3/4;
}

.text-only {
  background-color: #569493;
  color: #f8f8f8;
  border-radius: 10px 10px 0px 0px;
}

.link-only {
  background-color: #dfeaf0;
  border-radius: 10px;
}

.flexyflex {
  display: flex;
}

.linkIcon {
  padding: 16px 10px 16px 0px;
  font-size: 1.3em;
  margin-top: 6px;
}

@media only screen and (min-width:767px) {
  .grid-sizer,
  .grid-item {
    width: calc(25% - 10px);
  }

  /* Category Grids */
  .categoryGrid, .categoryGridSpace {
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
  }
}

@media only screen and (min-width:1023px) {
  .grid-sizer,
  .grid-item {
    width: calc(20% - 10px);
  }

  /* Category Grids */
  .categoryGrid, .categoryGridSpace {
    grid-template-columns: repeat(5, 1fr);
    gap: 10px;
  }
}

@media only screen and (min-width:1700px) {
  .grid-sizer,
  .grid-item {
    width: calc(12.5% - 10px);
  }

  /* Category Grids */
  .categoryGrid, .categoryGridSpace {
    grid-template-columns: repeat(8, 1fr);
    gap: 10px;
  }
}


/* NAVIGATION */
/*Main Navbar */
#mainNavbarMenu {
  /* overflow: hidden; */
  position: fixed;
  height: 69.33px;
  width: 100%;
  display: flex;
  z-index: 10;
  top: 0px;
  background-color: #4c4475;
  align-items: center;
}

#mainNavbarMenu li {
  width: 100%;
}

#mainNavbarMenu a {
  display: block;
  padding: 20px 0px;
  font-weight: bold;
  transition: background-color 0.5s linear;
  text-transform: uppercase;
  color: #f8f8f8;
  display: flex;
  align-items: center;
  justify-content: center;
}

#burglinks {
  width: 100%;
  padding-top: 50px;
  padding-bottom: 0px;
  background-color: #4c4475;
}

#mainNavbarMenu .logo {
  width: 40%;
}

#mainNavbarMenu .logo h1 {
  font-size: 1.5em;
}

#mainNavbarMenu .logo a:hover {
  background-color: inherit;
  color: white;
}

#mainNavbarMenu .logo li {
  padding-inline-start: 0px;
  width: 100%;
}


#mainNavbarMenu ul.logo {
  margin: 0;
  display: flex;
  padding-inline-start: 0px;
  z-index: inherit;
  justify-content: start;
}

.active {
  color: white;
  background-color: #6e65a4;
}

#mainNavbarMenu a:hover {
  color: #121212;
  background-color: white;
  text-decoration: none;
}

.userNav {
  display: flex;
  justify-content: right;
  width: 35%;
  padding-right: 10px;
}

@media only screen and (min-width: 767px) {
  #mainNavbarMenu {
    padding: 0px 5%;
    width: 90%;
    height: 49.09px;;
  }
  
  #mainNavbarMenu li {
    width: 30%;
  }

  
  #mainNavbarMenu a {
    padding: 15px 0px;
  }

  #mainNavbarMenu .logo h1 {
    font-size: 1.2em;
    line-height: 1em;
  }

  #mainNavbarMenu ul {
    display: flex;
    width: 100%;
    justify-content: center;
    margin: 0px 0px;
    padding-inline-start: 0px;
  }

  #mainNavbarMenu .logo {
    width: 25%;
  }
  
  #burglinks {
    display: flex;
    width: 50%;
    background-color: rgba(20, 17, 19, 0);
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .hamburgerhide {
    display: none;
  }

  #burglinks .dropdown a {
    transition: background-color 0.5s linear;
  }

  .userNav {
    width: 25%;
  }
}

@media only screen and (min-width: 1023px) {
  #mainNavbarMenu {
    padding: 0px 10%;
    width: 80%;
  }

}

@media only screen and (min-width: 1700px) {
  #mainNavbarMenu {
    padding: 0px 15%;
    width: 70%;
  }

}


/* Search bar */

.searchBar {
  padding-bottom: 2%;
  padding-top: 2%;
}

.searchBar form {
  width: 100%;
  justify-content: center;
  display: flex;
  position: relative;
  border-radius: 25px;
  align-items: center;
}

.searchBar .icon-search {
  cursor: pointer;
}

.searchBar .icon-search svg {
  height: 35px;
}

textarea {
  background-color: #dfeaf0;
  color: #121212;
  font-weight: 600;
  text-indent: 3%;
  border-radius: 25px;
  cursor: default;
  padding: 8px 0px;
  border: none;
  width: 80%;
  justify-content: center;
  resize: none;
}

input {
  width: 100%;
  color: #121212;
  font-weight: 600;
  text-indent: 5%;
  padding: 12px 0px;
  cursor: default;
  border: none;
  justify-content: center;
  display: flex;
  background-color: #dfeaf0;
  position: relative;
  border-radius: 25px;
  align-items: center;
}

input:focus {
  outline: #f8f8f8;
}

textarea:focus {
  outline: #f8f8f8;
}

textarea::placeholder {
  font: 700 1.2em 'Nunito', sans-serif;
  color: #121212;
  line-height: 1.5em;
}

input::placeholder {
  font: 700 1.2em 'Nunito', sans-serif;
  color: #121212;
  line-height: 1.5em;
}

/* FOOTER */
footer {
  background-color: #569493;
  padding: 30px;
  color: #121212;
  display: block;
  padding: 1% 10%;
}

footer ul {
  padding-left: 12px;
}

footer a {
  color: #121212;
}

footer a:hover {
  color: #dfeaf0;
}

.footermenuitems {
  padding-bottom: 40px;
}

footer .footermenuitems {
  justify-content: center;
}

.rowfooter {
  width: 100%;
  justify-content: space-between;
}

.socialmedialinks {
  padding-left: 12px;
}

.socialmedialinks i{
  padding-right: 5px;
}

@media only screen and (min-width: 425px) {
  .rowfooter {
      display: flex;
  }

  footer li {
      text-align: left;
  }
}  

@media only screen and (min-width: 769px) {
  footer {
      display: flex;
  }
}

/* MODAL POP-UP */
/* Modal Button */
.addItem {
  box-shadow: none;
}

.logoIMG {
  width: 80%;
  text-align: center;
  padding-bottom: 0;
}
.logoIMG img {
  height: 130px;
}

#create-resource-modal-button, #create-collection-modal-button, #create-space-modal-button {
  border: 0;
  font-size: 1em;
  background-color: #f8f8f8;
  transition: background-color 0.5s ease-out, color 0.5s ease-out, border 0.5s ease-out;
  border: 2px solid #555555;
  border-radius: 10px;
  width: 100%;
  height: 100%;
  min-height: 90px;
}
/* ... */

